# Data_Analysis_Platform

./: .gitignore  LICENSE  README.md
ai_app/: .env.example  README.md  main.py  pyproject.toml
ai_app/api/: routes.py
ai_app/engines/: llm_adapter.py  mock_llm.py
ai_app/models/: schemas.py
ai_app/services/: data_loader.py  data_processor.py  insight_engine.py  orchestrator.py  query_engine.py  tool_executor.py  visualization_engine.py
ai_app/utils/: safe_ops.py
web_app/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
web_app/backend/controllers/: chatController.ts  dashboardController.ts  datasetController.ts
web_app/backend/db/: database.ts
web_app/backend/routes/: chatRoutes.ts  dashboardRoutes.ts  datasetRoutes.ts
web_app/backend/services/: aiService.ts  mockAiService.ts
web_app/src/: App.tsx
web_app/src/components/: Chart.tsx  DataTable.tsx  Layout.tsx  Navbar.tsx
web_app/src/pages/: Chat.tsx  Dashboard.tsx  Datasets.tsx
web_app/src/services/: api.ts
